--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -12,77 +12,89 @@
         orientation: "vertical"
 
         MDBoxLayout:
+            padding: 15
+            orientation: "vertical"
 
-        MDLabel:
-            text_color: app.theme_cls.primary_color
-            theme_text_color: "Custom"
-            font_style: 'Subtitle1'
-            halign: "center"
-            text: "Greetings [color=#FFFFFF]host[/color],\nhow many [color=#FFFFFF]players[/color] are playing?"
-            markup: True
+            MDLabel:
+                text_color: C("FFFFFF")
+                theme_text_color: "Custom"
+                font_style: "H4"
+                halign: "center"
+                text: "Player Amount"
+                text_size: self.size
 
-        MDBoxLayout:
-
-        MDGridLayout:
-            cols: 3
-            rows: 2
-            spacing: 5
-
-            MDFillRoundFlatIconButtonToggle:
-                icon: "robot"
-                group: "player"
-                id: butt1
-                font_style: "Button"
-                md_bg_color: app.theme_cls.primary_color
-                text: "4 Players"
-
-            MDFillRoundFlatIconButtonToggle:
-                icon: "robot"
-                group: "player"
-                id: butt2
-                font_style: "Button"
-                md_bg_color: app.theme_cls.primary_color
-                text: "5 Players"
-
-            MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
-                group: "player"
-                id: butt3
-                font_style: "Button"
-                md_bg_color: app.theme_cls.primary_color
-                text: "6 Players"
-
-            MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
-                group: "player"
-                id: butt4
-                font_style: "Button"
-                md_bg_color: app.theme_cls.primary_color
-                text: "7 Players"
-
-            MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
-                group: "player"
-                id: butt5
-                font_style: "Button"
-                md_bg_color: app.theme_cls.primary_color
-                text: "8 Players"
-
-            MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
-                group: "player"
-                id: butt6
-                font_style: "Button"
-                md_bg_color: app.theme_cls.primary_color
-                text: "9 Players"
+            MDLabel:
+                text_color: app.theme_cls.primary_color
+                size_hint: 1, 0.7
+                text_size: self.size
+                theme_text_color: "Custom"
+                font_style: 'Subtitle1'
+                halign: "center"
+                text: "Greetings [color=#FFFFFF]host[/color], please select the [color=#FFFFFF]amount[/color] of [color=#FFFFFF]players[/color] that are currently playing."
+                markup: True
 
         MDBoxLayout:
         MDBoxLayout:
+
+            MDGridLayout:
+                cols: 3
+                rows: 2
+                spacing: 5
+                size_hint: 1, 0.5
+
+                MDFillRoundFlatIconButtonToggle:
+                    icon: "account-group-outline"
+                    group: "player"
+                    id: butt1
+                    font_style: "Button"
+                    md_bg_color: app.theme_cls.primary_color
+                    text: "4 Players"
+
+                MDFillRoundFlatIconButtonToggle:
+                    icon: "account-group-outline"
+                    group: "player"
+                    id: butt2
+                    font_style: "Button"
+                    md_bg_color: app.theme_cls.primary_color
+                    text: "5 Players"
+
+                MDFillRoundFlatIconButtonToggle:
+                    icon: "account-group"
+                    group: "player"
+                    id: butt3
+                    font_style: "Button"
+                    md_bg_color: app.theme_cls.primary_color
+                    text: "6 Players"
+
+                MDFillRoundFlatIconButtonToggle:
+                    icon: "account-group"
+                    group: "player"
+                    id: butt4
+                    font_style: "Button"
+                    md_bg_color: app.theme_cls.primary_color
+                    text: "7 Players"
+
+                MDFillRoundFlatIconButtonToggle:
+                    icon: "account-group"
+                    group: "player"
+                    id: butt5
+                    font_style: "Button"
+                    md_bg_color: app.theme_cls.primary_color
+                    text: "8 Players"
+
+                MDFillRoundFlatIconButtonToggle:
+                    icon: "account-group"
+                    group: "player"
+                    id: butt6
+                    font_style: "Button"
+                    md_bg_color: app.theme_cls.primary_color
+                    text: "9 Players"
+
         MDBoxLayout:
 
             MDFillRoundFlatButton:
                 id: proceed
-                size_hint: 1, 1
+                size_hint: 1, 0.4
                 md_bg_color: app.theme_cls.primary_color
                 font_style: "Button"
                 text: "Continue"
