Working on reveal screen, save to prevent power going out.

--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -43,7 +43,7 @@
             size_hint: 1, 0.5
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "account-group-outline"
+                icon: "robot"
                 group: "player"
                 id: butt1
                 font_style: "Button"
@@ -51,7 +51,7 @@
                 text: "4 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "account-group-outline"
+                icon: "robot"
                 group: "player"
                 id: butt2
                 font_style: "Button"
@@ -59,7 +59,7 @@
                 text: "5 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
+                icon: "robot-off"
                 group: "player"
                 id: butt3
                 font_style: "Button"
@@ -67,7 +67,7 @@
                 text: "6 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
+                icon: "robot-off"
                 group: "player"
                 id: butt4
                 font_style: "Button"
@@ -75,7 +75,7 @@
                 text: "7 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
+                icon: "robot-off"
                 group: "player"
                 id: butt5
                 font_style: "Button"
@@ -83,7 +83,7 @@
                 text: "8 Players"
 
             MDFillRoundFlatIconButtonToggle:
-                icon: "account-group"
+                icon: "robot-off"
                 group: "player"
                 id: butt6
                 font_style: "Button"
