--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -38,13 +38,57 @@
             id: setgrid
             padding: 20
             spacing: 5
-            cols: 9
+            cols: 4
+            adaptive_height: True
+
+            MDIcon:
+                text_color: C("FFFFFF")
+                theme_text_color: "Custom"
+                icon: "menu-down"
+                halign: "center"
+
+            MDIcon:
+                icon: "refresh"
+
+            MDIcon:
+                icon: "refresh"
+
+            MDIcon:
+                icon: "refresh"
+#
+#            MDIcon:
+#                icon: "refresh"
+#
+#            MDIcon:
+#                icon: "refresh"
+#
+#            MDIcon:
+#                icon: "refresh"
+#
+#            MDIcon:
+#                icon: "refresh"
+#
+#            MDIcon:
+#                icon: "refresh"
+
+        MDGridLayout:
+            id: setgrid
+            adaptive_height: True
+            padding: 20
             spacing: 5
+            cols: 9
+            MDBoxLayout:
+                spacing: 10
+                orientation: "vertical"
+                MDIcon:
+                    text_color: C("FFFFFF")
+                    theme_text_color: "Custom"
+                    icon: "menu-down"
+                    halign: "center"
 
-
-            MDProgressBar:
-                id: ind1
-                value: 100
+                MDProgressBar:
+                    id: ind1
+                    value: 100
 
             MDProgressBar:
                 id: ind2
@@ -78,6 +122,19 @@
                 id: ind9
                 value: 100
 
+        MDBoxLayout:
+        MDBoxLayout:
+
+#        MDFillRoundFlatButton:
+#            id: endreveal
+#            md_bg_color: app.theme_cls.primary_color
+#            text: "Reveal"
+#            font_style: "Button"
+#            pos_hint: {"center_x": 0.5, "center_y": 0.5}
+#            size_hint: 0.5, 0.5
+#            on_release:
+#                root.reveal()
+#        MDBoxLayout:
 
 #    MDBoxLayout:
 #        orientation: "vertical"
