Tracker is ready to receive functionality.

--- a/gui/welcome.kv
+++ b/gui/welcome.kv
@@ -10,9 +10,8 @@
     MDBoxLayout:
         orientation: "vertical"
         MDToolbar:
-            title: "C0de.Net"
             left_action_items: [["menu", lambda x: x]]
-            right_action_items: [["information-outline", lambda x: x]]
+            title: "C0de.Net"
 
         MDStackLayout:
             spacing: 20
@@ -24,6 +23,7 @@
                 theme_text_color: "Custom"
                 font_style: "H4"
                 text: "Welcome"
+                underline: True
                 halign: "center"
 
             MDLabel:
