--- a/gui/colorselect.kv
+++ b/gui/colorselect.kv
@@ -26,6 +26,7 @@
                 font_style: "H4"
                 text: "Player Amount"
                 halign: "center"
+                underline: True
 
             MDLabel:
                 adaptive_height: True
