--- a/gui/playeramount.kv
+++ b/gui/playeramount.kv
@@ -25,6 +25,7 @@
                 font_style: "H4"
                 text: "Player Amount"
                 halign: "center"
+                underline: True
 
             MDLabel:
                 adaptive_height: True
