--- a/gui/revealdirections.kv
+++ b/gui/revealdirections.kv
@@ -23,108 +23,193 @@
                 theme_text_color: "Custom"
                 font_style: "H4"
                 text: "Role Reveal"
+                underline: True
                 halign: "center"
 
             MDLabel:
-                text: "Please follow the [color=#FFFFFF]tracker[/color] and [color=#FFFFFF]click[/color] the reveal [color=#FFFFFF]button[/color] when it's your [color=#FFFFFF]turn[/color] to check your [color=#FFFFFF]role[/color]."
+                text: "Please follow the [color=#FFFFFF]tracker[/color] below and [color=#FFFFFF]click[/color] the [color=#FFFFFF]button[/color] at the bottom right corner when it's your [color=#FFFFFF]turn[/color] to check your [color=#FFFFFF]role[/color]."
                 adaptive_height: True
                 text_color: app.theme_cls.primary_color
                 theme_text_color: "Custom"
                 font_style: 'Subtitle1'
                 halign: "center"
                 markup: True
+        MDBoxLayout:
+            padding: 10
 
-        MDGridLayout:
-            id: setgrid
-            padding: 20
-            spacing: 5
-            cols: 4
-            adaptive_height: True
-
-            MDIcon:
-                text_color: C("FFFFFF")
-                theme_text_color: "Custom"
-                icon: "menu-down"
-                halign: "center"
-
-            MDIcon:
-                icon: "refresh"
-
-            MDIcon:
-                icon: "refresh"
-
-            MDIcon:
-                icon: "refresh"
-#
-#            MDIcon:
-#                icon: "refresh"
-#
-#            MDIcon:
-#                icon: "refresh"
-#
-#            MDIcon:
-#                icon: "refresh"
-#
-#            MDIcon:
-#                icon: "refresh"
-#
-#            MDIcon:
-#                icon: "refresh"
-
-        MDGridLayout:
-            id: setgrid
-            adaptive_height: True
-            padding: 20
-            spacing: 5
-            cols: 9
-            MDBoxLayout:
+            MDGridLayout:
+                canvas.before:
+                    Color:
+                        rgba: 51/255, 255/255, 51/255, 0.3
+                    Line:
+                        width: 0.3
+                        rectangle: self.x, self.y, self.width, self.height
+                    Color:
+                        rgba: 51/255, 255/255, 51/255, 0.06
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
+                id: setgrid
+                adaptive_height: True
+                padding: 20
                 spacing: 10
-                orientation: "vertical"
-                MDIcon:
-                    text_color: C("FFFFFF")
-                    theme_text_color: "Custom"
-                    icon: "menu-down"
-                    halign: "center"
+                cols: 9
 
-                MDProgressBar:
-                    id: ind1
-                    value: 100
+                MDBoxLayout:
+                    id: des1
+                    spacing: 10
+                    orientation: "vertical"
 
-            MDProgressBar:
-                id: ind2
-                value: 100
+                    MDIcon:
+                        id: ind1
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
 
-            MDProgressBar:
-                id: ind3
-                value: 100
+                    MDProgressBar:
+                        id: cind1
+                        value: 100
 
-            MDProgressBar:
-                id: ind4
-                value: 100
+                MDBoxLayout:
+                    id: des2
+                    spacing: 10
+                    orientation: "vertical"
 
-            MDProgressBar:
-                id: ind5
-                value: 100
+                    MDIcon:
+                        id: ind2
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
 
-            MDProgressBar:
-                id: ind6
-                value: 100
+                    MDProgressBar:
+                        id: cind2
+                        value: 100
 
-            MDProgressBar:
-                id: ind7
-                value: 100
+                MDBoxLayout:
+                    id: des3
+                    spacing: 10
+                    orientation: "vertical"
 
-            MDProgressBar:
-                id: ind8
-                value: 100
+                    MDIcon:
+                        id: ind3
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
 
-            MDProgressBar:
-                id: ind9
-                value: 100
+                    MDProgressBar:
+                        id: cind3
+                        value: 100
+
+                MDBoxLayout:
+                    id: des4
+                    spacing: 10
+                    orientation: "vertical"
+
+                    MDIcon:
+                        id: ind4
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
+
+                    MDProgressBar:
+                        id: cind4
+                        value: 100
+
+                MDBoxLayout:
+                    id: des5
+                    spacing: 10
+                    orientation: "vertical"
+
+                    MDIcon:
+                        id: ind5
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
+
+                    MDProgressBar:
+                        id: cind5
+                        value: 100
+
+                MDBoxLayout:
+                    id: des6
+                    spacing: 10
+                    orientation: "vertical"
+
+                    MDIcon:
+                        id: ind6
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
+
+                    MDProgressBar:
+                        id: cind6
+                        value: 100
+
+                MDBoxLayout:
+                    id: des7
+                    spacing: 10
+                    orientation: "vertical"
+
+                    MDIcon:
+                        id: ind7
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
+
+                    MDProgressBar:
+                        id: cind7
+                        value: 100
+
+                MDBoxLayout:
+                    id: des8
+                    spacing: 10
+                    orientation: "vertical"
+
+                    MDIcon:
+                        id: ind8
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
+
+                    MDProgressBar:
+                        id: cind8
+                        value: 100
+
+                MDBoxLayout:
+                    id: des9
+                    spacing: 10
+                    orientation: "vertical"
+
+                    MDIcon:
+                        id: ind9
+                        opacity: 0
+                        text_color: C("FFFFFF")
+                        theme_text_color: "Custom"
+                        icon: "menu-down"
+                        halign: "center"
+
+                    MDProgressBar:
+                        id: cind9
+                        value: 100
 
         MDBoxLayout:
         MDBoxLayout:
-
+        MDBoxLayout:
 #        MDFillRoundFlatButton:
 #            id: endreveal
 #            md_bg_color: app.theme_cls.primary_color
@@ -162,4 +247,4 @@
                 icon: "square-rounded-outline"
                 type: "bottom"
                 on_action_button: app.on_pause()
-                right_action_items: [["chevron-right", lambda x: x]]
+                right_action_items: [["account-search", lambda x: x], ["chevron-right", lambda x: x]]
